# gmail2ldif

./: .gitignore  AUTHORS  ChangeLog  README  TODO  config.h.in  configure.ac
doc/: Makefile.am  gmail2ldif.1  gmail2ldif.man
src/: Makefile.am  args.c  args.h  gmail2ldif.c  input.c  input.h  main.c  main.h  output.c  output.h  parse.c  parse.h  test.c  test.h
test/: Makefile.am  input_short.c  input_short_header.c  lex_header.c  lex_short.c  lex_short_csv.c  lex_short_separators.c  parse_args_01.c  parse_args_02.c  parse_args_03.c  parse_header_01.c  parse_header_02.c  parse_header_03.c  parse_short_csv.c  parse_short_string.c
test/data/: Makefile.am  complete-ascii-expect.ldif  complete-ascii.csv  complete-utf16-expect.ldif  complete-utf16.csv  header-ascii.csv  header-utf16.csv  short-ascii-csv.csv  short-ascii-separators.txt  short-ascii-two.txt  short-utf16le.txt
